<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.spencermassey.test.MainActivity"
    android:background="@drawable/wallpaper"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">




    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:text="@string/button_word_jumble"
        android:background="@drawable/button"
        android:onClick="GoToWordJumble"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/returnbtn"
        android:layout_width="210dp"
        android:layout_height="75dp"
        android:text="@string/button_word_ladder"
        android:background="@drawable/button"
        android:onClick="GoToWordLadder"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mbm_games"
        android:background="@android:color/transparent"
        android:visibility="visible"
        android:id="@+id/editText2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="false"/>

</android.support.constraint.ConstraintLayout>
