<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ocean"
    tools:context="com.example.spencermassey.test.WordJumble"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/Word1"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/rodW"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/Word2"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/Ldor"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer1" />

    <EditText
        android:id="@+id/Word3"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/arLd"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer2" />

    <EditText
        android:id="@+id/Word4"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/nLad"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer3" />

    <EditText
        android:id="@+id/Word5"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/eLna"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer4" />

    <EditText
        android:id="@+id/Word6"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/eaCn"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer5" />

    <EditText
        android:id="@+id/Word7"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/oenC"
        android:textSize="30sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer6"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/Answer1"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer2"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word1" />

    <EditText
        android:id="@+id/Answer2"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer3"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word2" />

    <EditText
        android:id="@+id/Answer3"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer4"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word3" />


    <EditText
        android:id="@+id/Answer4"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer5"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word4" />

    <EditText
        android:id="@+id/Answer5"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer6"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word5" />


    <EditText
        android:id="@+id/Answer6"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer7"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word6" />

    <EditText
        android:id="@+id/Answer7"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/answer"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:nextFocusDown="@+id/Answer1"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word7" />


    <TextView
        android:id="@+id/hint1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint1"
        android:text="@string/hint"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/Word1"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint2"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer1"
        app:layout_constraintLeft_toRightOf="@+id/Word2"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/hint3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint3"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer2"
        app:layout_constraintLeft_toRightOf="@+id/Word3"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/hint4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint4"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer3"
        app:layout_constraintLeft_toRightOf="@+id/Word4"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/hint5"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint5"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer4"
        app:layout_constraintLeft_toRightOf="@+id/Word5"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/hint6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint6"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer5"
        app:layout_constraintLeft_toRightOf="@+id/Word6"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/hint7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:onClick="hint7"
        android:text="@string/hint"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Answer6"
        app:layout_constraintLeft_toRightOf="@+id/Word7"
        android:layout_marginLeft="70dp" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="exit"
        android:text="@string/exit"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/Reset" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Reset"
        android:text="@string/reset"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/check" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>
